# CageLooppy

./: .gitignore  README.md  cmd.txt  pyproject.toml
cagingloop/: __init__.py  curvature.py  depth.py  distance.py  grasp.py  model_io.py  morse.py  nearest.py  polyscope_visualization.py  rgbd.py  saddle.py  saddle_gpu.py  trace_gpu.py  types.py  visualization.py  voxelization.py
docs/: conversation-notes.md  matlab-python-differences.md  overview.md  paper-alignment.md  trellis-future-directions.md
docs/superpowers/plans/: 2026-05-27-python-port-implementation.md  2026-06-12-rgbd-render.md
docs/superpowers/specs/: 2026-05-27-python-port-design.md  2026-06-12-rgbd-render-design.md
examples/: render_all_rgbd.bat  render_rgbd.py  run_depth_polyscope.py  run_internals_polyscope.py  run_model_polyscope.py  run_pipeline.py  run_pipeline_polyscope.py
tests/: test_distance.py  test_grasp.py  test_model_io.py  test_nearest.py  test_polyscope_visualization.py  test_public_api.py  test_rgbd.py  test_saddle.py  test_types.py  test_voxelization.py
