[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagingloop"
version = "0.1.0"
description = "Python port of CagingLoop MATLAB interfaces"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-fmm>=2023.4.2",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
mesh = ["scikit-image>=0.21"]
polyscope = ["polyscope>=2.3"]
rgbd = ["open3d>=0.18"]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["."]
